fix question change helper text fix skeleton position in quiz make shareStickyButton smaller remove question change helper from desktop add more padding to answer text

--- a/frontend/static/css/style.css
+++ b/frontend/static/css/style.css
@@ -2398,8 +2398,7 @@ body {
 }
 
 .quiz__answerText {
-  padding-right: 1rem;
-  padding-left: 1rem;
+  padding: 1rem 2rem;
 }
 
 @media (min-width: 40em) {
